# tprint-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: Cargo.toml  basic_usage.rs  file_output.rs  html_output.rs  string_output.rs
src/: borders.rs  column.rs  lib.rs  output.rs  tprint.rs  tprint_borders.rs  tprint_column.rs  utils.rs
tests/: basic_test.rs
