[package]
name = "tprint"
version = "0.0.2"
authors = ["Paul Jonkins <paul.jonkins@gmail.com>"]
edition = "2021"
description = "A simple crate to print tabular data"
readme = "README.md"
repository = "https://github.com/wizzard/tprint-rs"
license = "MIT"
categories = ["command-line-interface"]
keywords = ["table", "print", "console", "tabular"]


[dependencies]
unicode-width = { version = "0.2.0", optional = true }

[dev-dependencies]
chrono = "0.4.39"

[features]
default = ["unicode"]
unicode = ["dep:unicode-width"]


[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "file_output"
path = "examples/file_output.rs"

[[example]]
name = "html_output"
path = "examples/html_output.rs"