[package]
name = "tprint"
version = "1.0.1"
authors = ["Paul Jonkins <paul.jonkins@gmail.com>"]
edition = "2021"
description = "A simple crate to print tabular data"
readme = "README.md"
repository = "https://github.com/wizzard/tprint-rs"
license = "MIT"
categories = ["command-line-interface"]
keywords = ["table", "print", "console", "tabular"]


[dependencies]
unicode-width = { version = "0.2.0", optional = true }

[dev-dependencies]
chrono = "0.4.39"

[features]
default = ["unicode"]
unicode = ["dep:unicode-width"]